Version NEXT
============

:Released: FUTURE
:Maintainer:

* Declare test-time dependency on recent ‘unittest2’.
* Declare install-time dependency on ‘docutils’ library.
* Include unit tests for ‘version’ module with source distribution.


Version 2.0.1
=============

:Released: 2015-01-11
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

* Include the ‘version’ module with source distribution.


Version 2.0
===========

:Released: 2015-01-10
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

* Support both Python 3 (version 3.2 or later) and Python 2 (version
  2.7 or later).
* Document the API of all functions comprehensively in docstrings.
* Add a hacking guide for developers.
* Add explicit credit for contributors.
* Document the security impact of the default umask.

* Specify explicit text or binary mode when opening files.
* Preserve exception context in custom exceptions.

* Declare compatibility with current Python versions.
* Depend on Python 3 compatible libraries.
* Update package homepage to Alioth hosted project page.
* Use ‘pydoc.splitdoc’ to get package description text.
* Remove ASCII translation of package description, not needed now the
  docstring is a proper Unicode text value.
* Include test suite with source distribution.
* Move package metadata to ‘daemon/_metadata.py’.
* Migrate to JSON (instead of Python) for serialised version info.
* Add unit tests for metadata.
* Store and retrieve version info in Setuptools metadata.

* Migrate to ‘str.format’ for interpolation of values into text.
* Migrate to ‘mock’ library for mock objects in tests.
* Migrate to ‘testscenarios’ library for unit test scenarios.
* Migrate to ‘unittest2’ library for back-ported improvements.
  Remove custom test suite creation.
* Discriminate Python 2-and-3 compatible usage of dict methods.
* Discriminate Python 2-and-3 compatible bytes versus text.
* Declare explicit absolute and relative imports.
* Discriminate between different ‘fileno’ method behaviours.